--- a/pisi-lightdm-greeter.conf
+++ b/pisi-lightdm-greeter.conf
@@ -1,4 +1,4 @@
-; hvl-lightdm-greeter.conf
+; pisi-lightdm-greeter.conf
 ;
 ; General configuration
 ;
@@ -32,8 +32,8 @@
 
 
 [General]
-greeter-icon-theme=pardus-dark
-greeter-background-image-dir =/usr/share/lightdm/lightdm-hvl-greeter.conf.d/resources/bgs/
+greeter-icon-theme=breeze
+greeter-background-image-dir =/usr/share/lightdm/lightdm-pisi-greeter.conf/resources/bgs/
 loginform-offset-x=50%
 loginform-offset-y=40%
 settingsform-offset-x=100% 
