--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,10 +2,12 @@ set(PROJECT pisi-lightdm-greeter)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
+
 set(LIGHTDM_QT_INCLUDE_DIRS /usr/include/lightdm-qt5-3)
 
 
 
+#link_directories(/usr/lib/x86_64-linux-gnu)
 
 file(GLOB SRCS *.cpp *ui *moc)
 message(STATUS "SRCS ${SRCS}")
@@ -23,6 +25,7 @@ find_package(Qt5X11Extras REQUIRED)
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 
+
 add_definitions(-DUNIX)
 add_definitions(-D_LIB)
 add_definitions(-DNDEBUG)
@@ -35,9 +38,7 @@ pkg_check_modules(LIGHTDM_QT liblightdm-qt5-3)
 include_directories ( ${CMAKE_CURRENT_SOURCE_DIR}
                       ${CMAKE_CURRENT_BINARY_DIR}
                       ${LIGHTDM_QT_INCLUDE_DIRS}
-
 )
-
 
 
 file(GLOB TS_FILES ../languages/*.ts)
@@ -49,9 +50,9 @@ add_custom_target(translations DEPENDS ${QM_FILES})
 
 add_executable (pisi-lightdm-greeter ${SRCS} ${RSCS} ${QM_FILES})
 
-target_link_libraries ( pisi-lightdm-greeter Qt5::Widgets Qt5::Network Qt5::WebEngine Qt5::WebEngineCore Qt5::Quick Qt5::WebEngineWidgets lightdm-qt5-3 X11 Xcursor Xrandr Qt5X11Extras)
+target_link_libraries ( pisi-lightdm-greeter Qt5::Widgets Qt5::Network Qt5::WebEngine Qt5::WebEngineCore Qt5::Quick Qt5::WebEngineWidgets lightdm-qt5-3 X11 Xcursor Xrandr Qt5X11Extras )
 
 
 install(TARGETS ${PROJECT} RUNTIME DESTINATION bin)
-install(FILES ${QM_FILES} DESTINATION /usr/share/lightdm/lightdm-pisi-greeter.conf/lang)
+install(FILES ${QM_FILES} DESTINATION /usr/share/lightdm/lightdm-pisi-greeter.conf.d/lang)
 
